add html structure and styles to main_section-1
mobile, tablet and desktop version styles finished, with some details to concrete

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,6 +1,16 @@
-<main class="">
+<main class="main">
 
 
+    <load src="/partials/main_section-1.html" />
+
+
+
+
+
+    <section class="main_section-2"></section>
+
+
+    <section class="main_section-3"></section>
 
 
 </main>
