--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -2,5 +2,9 @@
 /*$font-main: 'Roboto', sans-serif;*/
 
 // colors
-/*$color-bg: #f3f4f5;*/
 
+$color-bright-orange: #f26002;
+$color-white: #ffffff;
+$color-ligth-grey: #979797;
+$color-greyish-brown: #4a4a4a;
+$color-black: #000000;
