--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'core/variables';
 @import 'core/reset';
-@import 'layout/page';
+/*@import 'layout/page';*/
 @import 'layout/footer';
 @import 'pages/index';
+@import 'layout/page_section-1'
