styles from main_section-1 finished
media queries done

font families added and applied

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,8 @@
 // fonts
-/*$font-main: 'Roboto', sans-serif;*/
+
+$font-roboto: 'Roboto', sans-serif;
+$font-roboto_slab: 'Roboto Slab', serif;
+
 
 // colors
 
