--- a/src/scss/layout/_page_section-1.scss
+++ b/src/scss/layout/_page_section-1.scss
@@ -6,18 +6,19 @@
     background-image: url(.././././../img/cover.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden;
     background-position: 37%;
 
     h1 {
         width: 315px;
         height: 57px;
         flex-grow: 0;
-        margin: 280px 0 34px 5px;
+        margin: 280px 0 34px;
         transform: rotate(-0.23deg);
         text-transform: uppercase;
         text-shadow: 0 2px 3px $color-black;
-        /* font-family: RobotoSlab;*/
-        font-size: 30px;
+        font-family: $font-roboto_slab;
+        font-size: 3rem;
         font-weight: bold;
         font-stretch: normal;
         font-style: normal;
@@ -27,16 +28,16 @@
         color: $color-white;
 
         @media (min-width: 768px) {
-            font-size: 75px;
+            font-size: 7rem;
             width: 100%;
             height: initial;
+            margin: 280px 0 0px;
         }
 
-        @media (min-width: 1200px) {
-            font-size: 100px;
+        @media (min-width: 1220px) {
+            font-size: 10rem;
             margin-bottom: initial;
-            margin-top: 600px;
-
+            margin-top: 37.5rem;
 
         }
     }
@@ -46,10 +47,10 @@
         height: 16px;
         padding: 5px 0px;
         flex-grow: 0;
-        margin: 34px 43px 34px 34px;
+        margin: 20px 43px 34px 34px;
         transform: rotate(-0.20deg);
-        /*font-family: Roboto;*/
-        font-size: 16px;
+        font-family: $font-roboto;
+        font-size: 1.5rem;
         font-weight: normal;
         font-stretch: normal;
         font-style: normal;
@@ -59,22 +60,23 @@
         color: $color-white;
 
         @media (min-width: 768px) {
-            font-size: 24px;
+            font-size: 2.25rem;
             width: 300px;
+            margin: 0px 43px 22px 34px;
             height: initial;
         }
 
-        @media (min-width: 1200px) {
-            font-size: 24px;
+        @media (min-width: 1220px) {
+            font-size: 3rem;
             width: 100%;
         }
     }
 
 
-    .main_section-1__div-menu {
+    &__div-menu {
         background-color: $color-bright-orange ;
-        width: 37px;
-        height: 34px;
+        width: 3.5rem;
+        height: 3.52rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -82,30 +84,39 @@
         top: 0;
         z-index: 1;
 
-        img {
-            width: 13px;
-            height: 11px;
+        @media (min-width: 1220px) {
+            width: 4.5rem;
+            height: 4.5rem;
         }
+
+        img {
+            width: 1.5rem;
+            height: 1.25rem;
+
+
+            @media (min-width: 1220px) {
+                width: 3rem;
+                height: 1.8rem;
+            }
+        }
+
+
     }
 
-    .main_section-1__div-text {
+    &__div-text {
         display: flex;
         flex-direction: column;
         margin: 0 auto;
         width: 100%;
         align-items: center;
 
+        @media (min-width: 768px) {
+            width: 85%;
+        }
 
     }
 
-    /* .main_section-1__div-hero img {
-        height: 100vh;
-        z-index: -1;
-        position: absolute;
-        top: 0px;
-    }*/
-
-    .main_section-1__div-arrow {
+    &__div-arrow {
         background-color: white;
         width: 38px;
         height: 36px;
@@ -113,8 +124,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        /* position: relative; */
+        position: relative;
+        top: 10px;
         margin: 0 auto;
+
+        @media (min-width: 1220px) {
+            top: -9px;
+        }
+
 
         img {
             width: 17px;
