--- a/src/partials/main_section-1.html
+++ b/src/partials/main_section-1.html
@@ -1,7 +1,7 @@
 <section class="main_section-1">
 
     <div class="main_section-1__div-menu">
-        <img src="../img/ico-menu.svg" alt="">
+        <img src="./images/ico-menu.svg" alt="">
     </div>
 
     <div class="main_section-1__div-text">
@@ -10,7 +10,7 @@
         <h2>Ya están aquí las ofertas de fin de temporada</h2>
 
         <div class="main_section-1__div-arrow">
-            <img src="../img/ico-scroll-down.svg" alt="">
+            <img src="./images/ico-scroll-down.svg" alt="">
         </div>
     </div>
 </section>
