--- a/src/scss/layout/_page_section-1.scss
+++ b/src/scss/layout/_page_section-1.scss
@@ -3,7 +3,7 @@
     background-color: pink;
     display: flex;
     align-items: center;
-    background-image: url(.././././../img/cover.jpeg);
+    background-image: url(../images/cover.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
