add style and html structure for main section-2 (finished)

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -7,7 +7,7 @@
 
 
 
-    <section class="main_section-2"></section>
+    <load src="/partials/main_section-2.html" />
 
 
     <section class="main_section-3"></section>
