--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,4 +3,6 @@
 /*@import 'layout/page';*/
 @import 'layout/footer';
 @import 'pages/index';
-@import 'layout/page_section-1'
+@import 'layout/page_section-1';
+@import 'layout/page_section-2';
+/*@import 'layout/page_section-3';*/
