main-section 2 and main-section 3 finished
styles and html completed

links added to top menu and arrows

--- a/src/scss/layout/_page_section-2.scss
+++ b/src/scss/layout/_page_section-2.scss
@@ -33,6 +33,7 @@
     h1 {
         font-family: $font-roboto_slab;
         font-size: 2.3rem;
+        text-transform: capitalize;
 
         @media (min-width: 768px) {
             font-size: 3.2rem;
