--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,16 +1,9 @@
 <main class="main">
 
-
     <load src="/partials/main_section-1.html" />
-
-
-
-
 
     <load src="/partials/main_section-2.html" />
 
-
-    <section class="main_section-3"></section>
-
+    <load src="/partials/main_section-3.html" />
 
 </main>
