--- a/src/partials/main_section-1.html
+++ b/src/partials/main_section-1.html
@@ -1,7 +1,8 @@
-<section class="main_section-1">
+<section id="top" class="main_section-1">
 
     <div class="main_section-1__div-menu">
-        <img src="./images/ico-menu.svg" alt="">
+        <a href="https://adalab.es/"><img src="./images/ico-menu.svg" alt=""></a>
+
     </div>
 
     <div class="main_section-1__div-text">
@@ -10,7 +11,8 @@
         <h2>Ya están aquí las ofertas de fin de temporada</h2>
 
         <div class="main_section-1__div-arrow">
-            <img src="./images/ico-scroll-down.svg" alt="">
+            <a href="#new-year"><img src="./images/ico-scroll-down.svg" alt=""></a>
+
         </div>
     </div>
 </section>
