--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,8 @@
 @import 'core/variables';
 @import 'core/reset';
 /*@import 'layout/page';*/
-@import 'layout/footer';
 @import 'pages/index';
 @import 'layout/page_section-1';
 @import 'layout/page_section-2';
-/*@import 'layout/page_section-3';*/
+@import 'layout/page_section-3';
+@import 'layout/footer';
