--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,31 @@
-<footer class=""></footer>
+<footer class="footer">
+
+
+    <div class="footer__div-list">
+
+        <ul class="footer__div-list_ul">
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">zapatillas</a></li>
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">ropa</a></li>
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">niño/a</a></li>
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">destacados</a></li>
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">tips</a></li>
+        </ul>
+
+
+        <ul class="footer__div-list_ul">
+
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">twitter</a></li>
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">instagram</a></li>
+            <li class="footer__div-list_ul-li"><a href="https://adalab.es/">youtube</a></li>
+
+        </ul>
+    </div>
+
+    <div class="footer__div-copy">
+
+        <p>&copy;2023</p>
+
+        <p>we <span><i class="fa-solid fa-heart"></i></span> run</p>
+
+    </div>
+</footer>
